+fixed sender message alignment

--- a/css/main.css
+++ b/css/main.css
@@ -120,18 +120,18 @@ input {
 
 .message_div {
     position: relative;
-    width: 60rem;
+    width: 100%;
     text-align: end;
     align-items: end;
 }
 
 .sender_message {
+    display: inline-block;
     position: relative;
     background-color: rgba(37, 30, 65, 0.719);
     height: fit-content;
     width: fit-content;
-    display: inline-block;
-    right: -17.5rem;
+    right: 1rem;
     text-align: end;
     margin-top: 1rem;
     padding-top: 0.5rem;
